--- a/README
+++ b/README
@@ -1,2 +1,7 @@
 woodstock
 =========
+
+6 7 2 8    木 tree; wood, lumber
+5 9 3 4    头 head; top; chief, first; boss
+8 0 A 1    股 thighs, haunches, rump; share
+7 9 6 8    票 slip of paper; ticket
