--- a/README
+++ b/README
@@ -1,5 +1,12 @@
 woodstock
 =========
+0
+
+-------    x(4)
+
+6 8 9 7    梗 stem of flower
+
+-------    hex
 
 6 7 2 8    木 tree; wood, lumber
 5 9 3 4    头 head; top; chief, first; boss
